--- a/3.2_Pandas_2.ipynb
+++ b/3.2_Pandas_2.ipynb
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1272,7 @@
     }
    ],
    "source": [
-    "df['Job_Title'].value_counts()"
+    "df['Job_Title'].value_counts()\n"
    ]
   },
   {
